[GTK] 2.25.1 does not build on 32-bit ARM due to bit-packing assertion, requires -DENABLE_DARK_MODE_CSS=OFF https://bugs.webkit.org/show_bug.cgi?id=198274

Reviewed by Timothy Hatcher.

Rather than reorder everything in StyleRareInheritedData, let's slightly increase the size
of GreaterThanOrSameSizeAsStyleRareInheritedData to allow the static assert to pass.

At the same time, remove an obsolote iOS-specific member that is probably no longer needed.

* rendering/style/StyleRareInheritedData.cpp:


Canonical link: https://commits.webkit.org/212712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246286 268f45cc-cd09-0410-ab3c-d52691b4dbfc